2010-01-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	New `env' demo for environment variables.

	* demo/env.c: New.

	* demo/Makefile.am: Update accordingly.

2010-01-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug in LKM9.

	* benchmarks/livermore/kernel9.c (innerk9): Fix array offset
	computation.

2010-01-12  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve the `perf' demo.

	* demo/perf.c: Also show the intervals API.

2010-01-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.
	
	* build-aux/benchmarks.mk (.c.tar): Avoid bundling files only
	useful for "make bench" to Unibench.

2009-12-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* NEWS: Initialize for 2.2.x.

2009-12-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Release version 2.2
	
	* configure.ac,
	* Makefile.am: Use the new automated version numbering from the SL
	toolchain.

	* build-aux/package-version: Initialize to 2.2.

	* NEWS,
	* README: New.

2009-12-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Cleanup source tree.
	
	* benchmarks/livermore/k1.c,
	* benchmarks/livermore/k2.c,
	* benchmarks/livermore/k2-alt.c,
	* benchmarks/livermore/k3.c,
	* benchmarks/livermore/k4.c,
	* benchmarks/livermore/k4-alt.c,
	* benchmarks/livermore/k5.c,
	* benchmarks/livermore/k6.c,
	* benchmarks/livermore/k7.c,
	* benchmarks/livermore/k8.c,
	* benchmarks/livermore/k9.c,
	* benchmarks/livermore/k10.c,
	* benchmarks/livermore/k11.c,
	* benchmarks/livermore/k12.c,
	* benchmarks/livermore/k13.c,
	* benchmarks/livermore/k14.c: Remove, as this has been superseded
	by new implementations.

	* benchmarks/blas/bench-dasum.c, benchmarks/blas/bench-daxpy.c,
	benchmarks/blas/bench-dcopy.c, benchmarks/blas/bench-ddot.c,
	benchmarks/blas/bench-dnrm2.c, benchmarks/blas/bench-drot.c,
	benchmarks/blas/bench-dscal.c, benchmarks/blas/bench-dswap.c,
	benchmarks/blas/bench-idamax.c, benchmarks/blas/bench-isamax.c,
	benchmarks/blas/bench-sasum.c, benchmarks/blas/bench-saxpy.c,